--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,24 @@ dependencies:
   get: ^4.3.8
   font_awesome_flutter: ^9.1.0
   fluttericon: ^2.0.0
-
-
+  chopper: ^4.0.1
+  get_storage: ^2.0.3
+  dio: ^4.0.0
+  intl: any
+  image_picker: ^0.8.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  flutter_keyboard_visibility: ^5.0.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: any
+  chopper_generator: any
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
