--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   flutter_keyboard_visibility: ^5.0.3
+  lottie: ^1.1.0
 
 
 dev_dependencies:
@@ -60,6 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/animations/
      - assets/svg/undraw_medicine_b1ol.svg
      - assets/svg/undraw_medical_care_movn.svg
 
